--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,9 +1,9 @@
 // Your variable overrides
 // See node_modules/bootstrap/scss/_variables.scss for all variables
-$body-bg: #000;
-$body-color: white;
-$primary: hotpink;
-$font-family-base: Arial;
+// $body-bg: #000;
+// $body-color: white;
+$primary: rgb(58, 216, 118);
+// $font-family-base: Arial;
 
 // Include all Bootstrap
 @import "~bootstrap/scss/bootstrap";
